ignored unused files/folders

--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,6 @@ dependencies {
 compileKotlin2Js {
     kotlinOptions.moduleKind = "commonjs"
     kotlinOptions.outputFile = "dist/out.js"
+    kotlinOptions.sourceMap = true
+    kotlinOptions.moduleKind = 'commonjs'
 }
