--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "apollo-server": "^2.9.7",
+    "graphql": "^14.5.8",
     "kotlin": "^1.3.50"
   }
 }
